--- a/Foundations/Odin Recipes/style.css
+++ b/Foundations/Odin Recipes/style.css
@@ -9,8 +9,9 @@ h1 {
     font-size: 50px;
     font-variant-caps: all-small-caps;
     border-bottom: solid;
-    width: 500px;
-    margin: 20px auto;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 h2 {
