--- a/Foundations/Odin Recipes/style.css
+++ b/Foundations/Odin Recipes/style.css
@@ -1,11 +1,12 @@
 * {
-    font-family: sans-serif;
+    font-family: "Barlow", sans-serif;
     font-size: 20px;
-}
+  }
 
 h1 {
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
+    font-family: "Bebas Neue", sans-serif;
     font-size: 50px;
     font-variant-caps: all-small-caps;
     border-bottom: solid;
@@ -16,6 +17,7 @@ h1 {
 
 h2 {
     text-align: center;
+    font-size: 25px;
 }
 
 div.container {
