--- a/Foundations/Odin Recipes/style.css
+++ b/Foundations/Odin Recipes/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: "Barlow", sans-serif;
     font-size: 20px;
+    box-sizing: border-box;
   }
 
 h1 {
@@ -20,12 +21,6 @@ h2 {
     font-size: 25px;
 }
 
-div.container {
-    text-align: center;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
 .container-recipes {
     max-width: 500px;
     margin: 0 auto;
@@ -37,33 +32,41 @@ div.container {
     width: 90%;
 }
 
-div>img {
-    width: 300px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-}
-
 .links {
     text-align: center;
     margin-bottom: 20px;
     font-variant-caps: all-small-caps;
 }
 
-.recipe {
-    display: inline-block;
-    margin: 0 5px; /* Adjust margin as needed */
-    text-align: center;
-}
-
 .recipe img {
-    width: 150px; /* Adjust width as needed */
     height: auto;
     margin: 10px;
     margin-bottom: 0px;
 }
 
 .recipe p {
-    max-width: 150px;
     margin: 0px 0px 10px;
 }
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: end;
+    gap: 16px;
+    margin: 0 auto;
+    padding: 20px 10px;
+    text-align: center;
+    max-width: 1200px;
+  }
+
+.container img, .container-recipes>img {
+    width: 100%;
+    max-width: 350px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+    display: block;
+    margin: 0 auto;
+  }
