--- a/Foundations/Odin Recipes/style.css
+++ b/Foundations/Odin Recipes/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
   }
 
-h1 {
+/* h1 {
     text-align: center;
     font-weight: 400;
     font-family: "Bebas Neue", sans-serif;
@@ -14,6 +14,15 @@ h1 {
     max-width: 500px;
     margin: 0 auto;
     margin-bottom: 20px;
+} */
+
+header img {
+    max-width: 400px;
+    max-height: auto;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
 }
 
 h2 {
@@ -56,7 +65,6 @@ h2 {
     align-items: end;
     gap: 16px;
     margin: 0 auto;
-    padding: 20px 10px;
     text-align: center;
     max-width: 1200px;
   }
